<resources>
    <string name="app_name">My Application</string>
    <string name="random_desc">Description</string>
    <string name="search">Search</string>
    <string name="username">User Name</string>
    <string name="coin_count">9999</string>

    <string name="run_name">Sample Run</string>
    <string name="run_desc">Run Description</string>

    <string name="start">Start Hunt</string>
</resources>