<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ImageVIew to display Run Image -->
        <ImageView
            android:id="@+id/card_run_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/profilepic" />

        <!-- Text View to display Run Name -->
        <TextView
            android:id="@+id/card_run_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/card_run_image"
            android:text="@string/run_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Text VIew to display Run Description -->
        <TextView
            android:id="@+id/card_run_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_run_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/card_run_image"
            android:drawablePadding="2dp"
            android:text="@string/random_desc" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>