<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/desc_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunDescriptionActivity"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="361dp"
        android:adjustViewBounds="true"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/sloth" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/random_desc"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="fill_parent"
        android:layout_height="452dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/run_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/run_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/run_desc_view"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:text="@string/random_desc"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="154dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:text="@string/start"
                android:textSize="30sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>